# framelock

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: quickstart_demo.py
examples/ci/: update-baseline-pr.yml  verify-dataset.yml
framelock/: __init__.py  cli.py  diff.py  hashing.py  manifest.py  repo.py  tracking.py
framepin/: __init__.py  cli.py  hashing.py  integrations.py  listfile.py  manifest.py  repo.py  tracking.py
tests/: test_cli.py  test_diff.py  test_integrations.py  test_listfile.py  test_manifest.py  test_pin.py  test_splits.py  test_tracking.py  test_verify.py
