[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framelock"
version = "0.1.0"
description = "A lockfile for your video/sequence-ML datasets and experiments — reproduce any run without copying a single frame."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "framelock" }]
keywords = [
    "mlops",
    "dataset-versioning",
    "experiment-tracking",
    "reproducibility",
    "video",
    "machine-learning",
    "data-lineage",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control",
]
# Zero runtime dependencies — pure standard library, by design.
dependencies = []

[project.urls]
Homepage = "https://github.com/boogy-ro/framelock"
Issues = "https://github.com/boogy-ro/framelock/issues"

[project.scripts]
framelock = "framelock.cli:main"

[tool.setuptools]
packages = ["framelock"]
