[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "framepin"
version = "0.3.1"
description = "A lockfile for your video/sequence-ML datasets and experiments — reproduce any run without copying a single frame."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "boogy-ro" }]
keywords = [
    "mlops",
    "dataset-versioning",
    "experiment-tracking",
    "reproducibility",
    "video",
    "machine-learning",
    "data-lineage",
    "data-version-control",
    "dvc-alternative",
    "ci-gate",
    "dataset-drift",
    "content-hashing",
    "merkle",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control",
]
# Zero runtime dependencies — pure standard library, by design.
dependencies = []

[project.urls]
Homepage = "https://boogy-ro.github.io/framepin/"
Repository = "https://github.com/boogy-ro/framepin"
Documentation = "https://github.com/boogy-ro/framepin#readme"
Changelog = "https://github.com/boogy-ro/framepin/releases"
Issues = "https://github.com/boogy-ro/framepin/issues"

[project.scripts]
framepin = "framepin.cli:main"

[tool.setuptools]
packages = ["framepin"]
